TransactionRepositoryAdapter works.